# mnethos

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  NOTICE.md  README.md  flake.nix  forge.schema.json  mnethos-windows-setup.md  package.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
crates/forge_api/: Cargo.toml
crates/forge_config/: .mnethos.toml
crates/forge_main/: Cargo.toml  build.rs
crates/forge_memory/: Cargo.toml  build.rs
crates/forge_memory/src/: client.rs  config.rs  consolidation.rs  domain.rs  lib.rs  observer.rs  retrieval.rs  retry.rs  session.rs
crates/forge_repo/: build.rs
crates/forge_server/: Cargo.toml  build.rs
crates/forge_server/deploy/: Caddyfile  Dockerfile  docker-compose.yml
crates/forge_server/proto/: aigateway.proto  forge.proto
crates/forge_server/src/: chunk.rs  dto.rs  embedding.rs  error.rs  grpc.rs  lib.rs  main.rs  proto.rs  server.rs  store.rs  workspace.rs
docs/site/: commands.md  creating-agents.md  custom-providers.md  custom-rules-guide.md  custom-rules.md  editor-configuration.md  file-tagging.md  ignoring-files.md  index.md  mcp-integration.md  mnethos-bin.md  mnethos-config.md  mnethos-services.md  mnethos-term.md  mnethos-toml.md  model-selection-guide.md  operating-agents.md  permissions.md  plan-and-act-guide.md  proxy-configuration.md  shortcuts.md  skills.md  vscode-extension.md  zsh-support.md
plans/: 2026-06-06-migrate-forgecode-ties-to-mnethos-host-v6.md  2026-06-06-mnethos-memory-service-provider-v1.md
scripts/: benchmark.sh  install.sh  list-all-porcelain.sh  test-400-error-message.sh  test-zsh-utils.sh
shell-plugin/: README.md  doctor.zsh  forge.plugin.zsh  forge.setup.zsh  forge.theme.zsh  keyboard.zsh
shell-plugin/lib/: bindings.zsh  config.zsh  context.zsh  dispatcher.zsh  (+2 more)
testbench/: README.md  ab-batch.sh  run-test.sh  setup-memory-user.sh
(+126 files in other folders)
